Made sure all the links in the examples files are correct.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Some examples for the jquery-slideandfade.js plugin</title>
-    <link rel="stylesheet" href="/css/examples.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="examples/jquery-slideandfade-examples.css" type="text/css" media="screen">
     <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/jquery-slideandfade.min.js"></script>
-    <script type="text/javascript" src="/js/examples.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery-slideandfade.min.js"></script>
+    <script type="text/javascript" src="examples/jquery-slideandfade-examples.js"></script>
 </head>
 <body>
 <div class="main-block">
