--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         </div>
     </div>
     <h2>Release history</h2>
-    <p>0.9.0 Initial release</p>
+    <p>0.9.1 Tidied up code significantly.</p>
+    <p>0.9.0 Initial release.</p>
     <div class="bottom-space"></div>
 </div>
 <div class="bottom-space"></div>
